(test
 (name main)
 (modules
  main
  fake_rng
  test_piecewise
  test_bounded_int
  test_player
  test_round
  test_board
  test_roster
  test_lineup_generator
  test_lineup_strategy
  test_card_pool
  test_position
  test_deck
  test_utils
  test_schedule
  test_dice
  test_standing)
 (libraries alcotest cachio))
